--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,17 +14,34 @@ div, header, nav, article, section, aside, footer, h1, h2, h3, h4, h5, h6, p, a,
 	margin: 0;
 	padding: 0;
 }
-
+img{
+    width: 100%;
+}
 /***HEADER****/
 header{
     background-image: url(../ressources/images/noir&blanc/header.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    height: 80vh;
    
 }
 header .center{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
-
+.logo{
+    flex: 1;
+}
+.nav{
+    flex: 2;
+}
+.icone{
+    flex: 1;
+}
+.icone a {
+    padding: 0 1vw;
+}
 ul{
     display: flex;
 }
@@ -33,7 +50,6 @@ a {
     color: white; 
 }
 #rubrique{
-    padding-top: 20vh;
     text-align: center;
 }
 i{
@@ -42,19 +58,30 @@ i{
 }
 li {
     list-style-type: none;
-    padding: 3vw;
+    padding: 0 3vw;
     
 }
 
 li a {
+    display: block;
     color:white;
     font-family: 'Roboto', sans-serif;
-    font-size: 2.5em;
+    font-size: 2em;
+    border: solid 3px transparent;
+    transition: all .5s;
 }
-
+li a:hover {
+    border-bottom: solid 3px #b79376;
+    transform: scale(1.2);
+}
 .icone a {
+    display: inline-block;
     font-size: 2em;
     color: white;
+    transition: all .5s;
+}
+.icone a:hover{
+    transform: scale(1.2);
 }
 
 
@@ -63,7 +90,7 @@ li a {
 .center{
     margin : 0 auto;
     padding-top: 5vh;
-    width: 80vw;
+    width: 70vw;
 }
 .hautDePage{
     display: flex;
@@ -99,7 +126,8 @@ figcaption{
 .ligne{
     margin:2vh 4vw;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
 }
 
 .bloc {
@@ -125,8 +153,7 @@ figure img {
 
 .btn{
     border: 1px solid transparent;
-    background-color:#a0a0a0;
-    border-radius: 30px;
+
     color: white;
     padding: 1vw 2vw;
     margin: 1vw;
@@ -134,11 +161,12 @@ figure img {
     font-size: 1rem;
     transition: all .5s;
     text-align: center;
+    border-bottom: solid 3px transparent;
 }
 .btn:hover{
     transform: scale(1.1);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-    background-color: rgb(233, 139, 115);
+    border-bottom: solid 3px #b79376;
 }
 
 /*Form Connexion*/
@@ -213,4 +241,9 @@ legend{
 
 .contenu{
     color: white;
+}
+
+/**FOOTER**/
+footer{
+
 }
