--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 html, body {
 	height: 100%;
-	background-color: /*#a0a0a0*/black;
+	background-color: /*#a0a0a0*/rgb(20, 20, 20);
 	border: 0 solid transparent;
 	font-size: 16px;
 	margin: 0;
@@ -8,7 +8,7 @@ html, body {
 	padding: 0;
 	width: 100%;
 	display: block;
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 div, header, nav, article, section, aside, footer, h1, h2, h3, h4, h5, h6, p, a, ul, li, figure, figcaption, class, img { 
 	margin: 0;
@@ -22,7 +22,7 @@ header{
     background-image: url(../ressources/images/noir&blanc/header.jpg);
     background-size: cover;
     background-attachment: fixed;
-    height: 80vh;
+    height: 60vh;
    
 }
 header .center{
@@ -65,9 +65,11 @@ li {
 li a {
     display: block;
     color:white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 2em;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.6em;
+    text-align: center;
     border: solid 3px transparent;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
     transition: all .5s;
 }
 li a:hover {
@@ -78,6 +80,7 @@ li a:hover {
     display: inline-block;
     font-size: 2em;
     color: white;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
     transition: all .5s;
 }
 .icone a:hover{
@@ -94,17 +97,17 @@ li a:hover {
 }
 .hautDePage{
     display: flex;
-}
-
-.vide{
-    flex:3;
+    
 }
 
 #message{
     flex:1;
-    font-size: 1.5em;
+    font-size: 2em;
     color: white;
+    padding-left: 10vw;
+    font-family: 'Neucha', sans-serif;
 }
+
 
 /*RESTE PAGE*/
 
@@ -113,12 +116,18 @@ li a:hover {
 }
 .propos{
     padding:3vw;
+    flex: 1;
 }
 
 figcaption{
     color: white;
     text-align: center;
     padding: 1vw;
+    text-align: justify;
+    letter-spacing: .2px;
+}
+span{
+    font-weight: bolder;
 }
 
 /*Article List*/
@@ -130,13 +139,19 @@ figcaption{
     /* justify-content: space-between; */
 }
 
+
 .bloc {
     padding-top: 2vh;
     display:flex;
     flex-direction: column;
     justify-content: center;
+    filter: grayscale(1);
+    transition: all .5s;
 }
-
+.bloc:hover{
+    transform: scale(1.1);
+    filter: grayscale(0);
+}
 .contenu{
     display: flex;
     justify-content: center;
@@ -186,7 +201,7 @@ label
 input
 {
     width: 20vw;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 
 }
 
@@ -210,6 +225,7 @@ legend{
 }
 
 /*article.php*/
+
 .article{
     display: flex;
     flex-direction: column;
@@ -220,12 +236,20 @@ legend{
 .btnArticle{
     display: flex;
 }
-.descriptif{
-    color:white;
-    font-family: 'Roboto', sans-serif;
-    padding: 1vw;
+.img {
+    flex: 1;
 }
-
+.descriptif{
+    flex: 2;
+    color:white;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 1vw 1vw 1vw 3vw;
+}
+.titre{
+    text-transform: uppercase;
+    font-size: 2.5em;
+    font-family: 'Neucha', sans-serif;
+}
 .article{
     padding: 2vw;
     display: flex;
@@ -245,5 +269,20 @@ legend{
 
 /**FOOTER**/
 footer{
+    background-color: black;
+    
+}
+footer div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 1vh;
+}
+footer div .logo{
+    flex: .8;
 
+}
+footer div .mentions{
+    flex: 3;
+    color:  white;
 }
