--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,6 +22,7 @@ header{
     background-image: url(../ressources/images/noir&blanc/header.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background-position: bottom;
     height: 60vh;
    
 }
@@ -394,4 +395,8 @@ p {
     color: white;
     text-align: center;
     padding: 10vh 0;
+}
+
+h2{
+    color:white;
 }
